--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,19 @@
       href="{{ url_for('static', filename='bootstrap.css') }}"
       rel="stylesheet"
     />
+    <style>
+      thead,
+      tbody,
+      tfoot,
+      tr,
+      td,
+      th {
+        padding: 0px !important;
+      }
+      .table > thead {
+        background: #e0d6af !important;
+      }
+    </style>
   </head>
   <body>
     <div class="container mt-5">
@@ -27,6 +40,7 @@
                       class="form-control"
                       id="target"
                       name="target"
+                      value="{{ target }}"
                       required
                     />
                   </div>
@@ -37,6 +51,7 @@
                       class="form-control"
                       id="start_port"
                       name="start_port"
+                      value="{{ start_port }}"
                       required
                     />
                   </div>
@@ -47,56 +62,40 @@
                       class="form-control"
                       id="end_port"
                       name="end_port"
+                      value="{{ end_port }}"
                       required
                     />
                   </div>
                   <div class="form-group mt-3">
                     <h5>Select port type</h5>
                     <div class="form-check">
-                      <input
-                        class="form-check-input"
-                        type="radio"
-                        name="port_type"
-                        id="radioAll"
-                        value="0"
-                        checked
-                      />
+                      <input class="form-check-input" type="radio"
+                      name="port_type" id="radioAll" value="0" {% if port_type
+                      == "0" %} checked {% endif %} required />
                       <label class="form-check-label" for="radioAll">
                         All
                       </label>
                     </div>
                     <div class="form-check">
-                      <input
-                        class="form-check-input"
-                        type="radio"
-                        name="port_type"
-                        id="radioOpen"
-                        value="1"
-                      />
+                      <input class="form-check-input" type="radio"
+                      name="port_type" id="radioOpen" value="1" {% if port_type
+                      == "1" %} checked {% endif %} required />
                       <label class="form-check-label" for="radioOpen">
                         Open
                       </label>
                     </div>
                     <div class="form-check">
-                      <input
-                        class="form-check-input"
-                        type="radio"
-                        name="port_type"
-                        id="radioClosed"
-                        value="2"
-                      />
+                      <input class="form-check-input" type="radio"
+                      name="port_type" id="radioClosed" value="2" {% if
+                      port_type == "2" %} checked {% endif %} required />
                       <label class="form-check-label" for="radioClosed">
                         Closed
                       </label>
                     </div>
                     <div class="form-check">
-                      <input
-                        class="form-check-input"
-                        type="radio"
-                        name="port_type"
-                        id="radioFiltered"
-                        value="3"
-                      />
+                      <input class="form-check-input" type="radio"
+                      name="port_type" id="radioFiltered" value="3" {% if
+                      port_type == "3" %} checked {% endif %} required/>
                       <label class="form-check-label" for="radioFiltered">
                         Filtered
                       </label>
@@ -113,55 +112,72 @@
           </div>
         </div>
         <div class="col-md-9">
-          {% if scan_results %}
-          <table class="table table-responsive table-striped table-hover">
-            <thead>
-              <tr>
-                <th>Port</th>
-                <th>State</th>
-                <th>Service</th>
-                <th>Service Product</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for result in scan_results %}
-              <tr>
-                <td>
-                  {{ result.port }} {% if result.protocol!=None %} /
-                  {{result.protocol}}{% endif %}
-                </td>
-                <td>{{ result.status }}</td>
-                <td>{{ result.service }}</td>
-                <td>{{ result.service_product }}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          {% else %}
-          <p>Your results will be displayed here</p>
-          {% endif %}
-          <!-- {% if open_ports %}
-          <h2 class="mt-5">Open Ports:</h2>
-          <ul>
-            {% for port in open_ports %}
-            <li>Port {{ port }} is open.</li>
-            {% endfor %}
-          </ul>
-          {% endif %} {% if closed_ports %}
-          <h2 class="mt-5">Closed Ports:</h2>
-          <ul>
-            {% for port in closed_ports %}
-            <li>Port {{ port }} is closed.</li>
-            {% endfor %}
-          </ul>
-          {% endif %} {% if filtered_ports %}
-          <h2 class="mt-5">Filtered Ports:</h2>
-          <ul>
-            {% for port in filtered_ports %}
-            <li>Port {{ port }} is filtered.</li>
-            {% endfor %}
-          </ul>
-          {% endif %} -->
+          <div class="card border-success">
+            <div class="card-body">
+              <table class="table table-striped">
+                <tr>
+                  <td>
+                    Open ports
+                    <span class="badge rounded-pill bg-success"
+                      >{{ open_count }}</span
+                    >
+                  </td>
+                  <td>
+                    Closed ports
+                    <span class="badge rounded-pill bg-danger"
+                      >{{ closed_count }}</span
+                    >
+                  </td>
+
+                  <td>
+                    Filtered ports
+                    <span class="badge rounded-pill bg-warning"
+                      >{{ filtered_count }}</span
+                    >
+                  </td>
+                  <td></td>
+                </tr>
+                {% if scan_results %}
+                <tr>
+                  <td colspan="2">
+                    <b>Scan started on</b>
+                    <span class="fw-light"> {{ start_time }} </span>
+                  </td>
+                  <td colspan="2">
+                    <b>Scan completed on</b>
+                    <span class="fw-light"> {{ finish_time }} </span>
+                  </td>
+                </tr>
+                {% endif %}
+              </table>
+
+              <table class="table table-responsive table-striped table-hover">
+                <thead>
+                  <tr>
+                    <th>Port</th>
+                    <th>State</th>
+                    <th>Service</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% if scan_results %} {% for result in scan_results %}
+                  <tr>
+                    <td>
+                      {{ result.port }} {% if result.protocol!=None %} /
+                      {{result.protocol}}{% endif %}
+                    </td>
+                    <td>{{ result.status }}</td>
+                    <td>{{ result.service }}</td>
+                  </tr>
+                  {% endfor %} {% else %}
+                  <tr>
+                    <td colspan="5">Your results will be displayed here</td>
+                  </tr>
+                  {% endif %}
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
