--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
       href="{{ url_for('static', filename='bootstrap.css') }}"
       rel="stylesheet"
     />
+    <link
+      href="{{ url_for('static', filename='loader.css') }}"
+      rel="stylesheet"
+    />
     <style>
       thead,
       tbody,
@@ -23,6 +27,18 @@
     </style>
   </head>
   <body>
+    <div id="loader">
+      <div class="spinner">
+        <div id="loading">
+          <img
+            src="{{ url_for('static', filename='scanning.gif') }}"
+            height="200"
+          />
+          <br />
+          Scanning ports. Please wait...
+        </div>
+      </div>
+    </div>
     <div class="container mt-5">
       <div class="row">
         <div class="col-4 col-md-3">
@@ -32,7 +48,7 @@
                 <h5 class="card-title font-red">Port Scanner</h5>
               </div>
               <div class="card-body">
-                <form method="POST" class="mt-3">
+                <form id="myForm" method="POST" class="mt-3">
                   <div class="form-group">
                     <label for="target">Target IP Address:</label>
                     <input
@@ -178,5 +194,13 @@
         </div>
       </div>
     </div>
+    <script type="text/javascript">
+      const form = document.getElementById("myForm");
+      const loader = document.getElementById("loader");
+
+      form.addEventListener("submit", function () {
+        loader.style.visibility = "visible";
+      });
+    </script>
   </body>
 </html>
